Backport fix to test timeout