@@ -110,6 +110,7 @@ import omero.model.WellSampleAnnotationLinkI;
 import omero.sys.EventContext;
 import omero.sys.ParametersI;
 
+import org.apache.commons.lang.StringUtils;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.BeforeClass;
 
@@ -227,7 +228,16 @@ public class AbstractServerTest extends AbstractTest {
         root = newRootOmeroClient();
         tmp.__del__();
 
-        scalingFactor = new Long(System.getProperty("omero.test.timeout"));
+        scalingFactor = 500;
+        final String timeoutString = System.getProperty("omero.test.timeout");
+        if (StringUtils.isNotBlank(timeoutString)) {
+            try {
+                scalingFactor = Long.valueOf(timeoutString);
+            } catch (NumberFormatException e) {
+                log.warn("Problem setting 'omero.test.timeout' to: {}. " +
+                         "Defaulting to {}.", timeoutString, scalingFactor);
+            }
+        }
         final EventContext ctx = newUserAndGroup("rw----");
         this.userFsDir = ctx.userName + "_" + ctx.userId + FsFile.separatorChar;
         SimpleBackOff backOff = new SimpleBackOff();
